# agentic-engineer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
conductor/: index.md  openclaw-validation-log.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
docs/plans/: 2026-03-02-feat-batch-2-workflow-tooling-plan.md
plan/: quick_reference.md  template_00_postmortem.md  template_01_inspiration.md  template_02_sdd_gen.md  template_03_stress_test.md  template_04_iteration.md
scripts/: pre-push-check.sh  sync-dist.sh
skills/: SKILL.md  planning-workflow.md  sdd-template.md  stress-test-prompts.md
spec/: README.md  postmortem_v1.md  raw_requirements.md  scorecard_v1.json  scorecard_v2.json  spec_v1.md  spec_v2.md  stress_test_v1.md  stress_test_v2.md
spec/gpt-researcher/: behavior_inventory.md  postmortem_v1.md  postmortem_v2.md  raw_requirements.md  scorecard_v1.json  spec_final.md  spec_v1.md  stress_test_v1.md
spec/spec-lint/: postmortem_v1.md  raw_requirements.md  scorecard_v1.json  spec_final.md  spec_v1.md  stress_test_v1.md
tools/: check_workflow_consistency.py  scorecard_parser.py  spec_lint.py  test_check_workflow_consistency.py  test_scorecard.json  test_scorecard_parser.py  test_spec_lint.py
